[gd_scene load_steps=5 format=2]

[ext_resource path="res://Code/Player.gd" type="Script" id=1]
[ext_resource path="res://OldAssets/aim.png" type="Texture" id=2]
[ext_resource path="res://Assets/Models/Characters/weezard.glb" type="PackedScene" id=3]

[sub_resource type="CapsuleShape" id=1]

[node name="Player" type="KinematicBody"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 6.35163, 0 )
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 1 )

[node name="an" type="Sprite3D" parent="."]
offset = Vector2( 0, 20 )
pixel_size = 0.1
axis = 1
texture = ExtResource( 2 )

[node name="InvulnTimer" type="Timer" parent="."]
one_shot = true

[node name="KnockTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="ReloadTimer" type="Timer" parent="."]
one_shot = true

[node name="DodgeTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="MeshInstance" type="MeshInstance" parent="."]

[node name="model" parent="." instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0 )

[connection signal="timeout" from="InvulnTimer" to="." method="_on_InvulnTimer_timeout"]
[connection signal="timeout" from="KnockTimer" to="." method="_on_KnockTimer_timeout"]
[connection signal="timeout" from="ReloadTimer" to="." method="_on_ReloadTimer_timeout"]
[connection signal="timeout" from="DodgeTimer" to="." method="_on_DodgeTimer_timeout"]
